[package]
name = "day-04"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.17.1" }
nom.workspace = true
utils = { path = "../utils", version = "*" }
itertools.workspace = true
