[package]
name = "day-10"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
memoize = "0.5.1"
nom.workspace = true
rayon = "1.11.0"
utils = { path = "../utils", version = "*" }

