[package]
name = "xtask"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
indoc = "2.0.7"
log = { version = "0.4.29", features = ["std"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
xshell = "0.2.7"
